some animations and colour changes

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 
 
         <!--Nav Bar-->
-        <nav class="navbar  navbar-expand-lg  navbar-dark bg-transparent">
-            <a class="navbar-brand"  href = "index.html"><div id ="name">AMAANULLAH </div></a>
+        <nav class="navbar  navbar-expand-md  navbar-dark bg-transparent">
+            <a class="navbar-brand"  href = "index.html">AMAANULLAH </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav mr-auto ">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#"><div id ="name">HOME</div><span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">BLOG <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#"><div id ="name">BLOG</div><span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">SETUP <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#"><div id ="name">SETUP</div><span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item ">
-                        <a class="nav-link" href="#">IMAGES<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#"><div id ="name">GALARY</div><span class="sr-only">(current)</span></a>
                       </li>
                     </ul>
 
@@ -76,15 +76,20 @@
             </div>
         </div>
         -->
+        <div class ="container-fluid">
+            <div class="row h-50">
+                <div class="col-1"></div>
+                <div class="col-11  my-auto">
+                        <h1>//Hello, I'm 
+                            <span
+                               class="txt-rotate"
+                               data-period="3000"
+                               data-rotate='[ "a developer", "a software engineer", "a team player", "Amaan...." ]'></span>
+                          </h1>
 
-      <div class="container">
-          <div class="row h-50">
-            <div class="col-sm-12 my-auto">
-                <h1>//Hi I'm Amaan</h1>
-                I'm a student Heriot-Watt studying Computer Science <br>
-
+                          I'm a student Heriot-Watt studying Computer Science 
+                </div>
             </div>
-        </div>
         </div>
     
         
@@ -100,4 +105,5 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="scripts/text-type.js"></script>
 </body>
