add more pages & fix text typer thingy

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto ">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><div id ="name">HOME</div><span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/index.html"><div id ="name active">HOME</div><span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#"><div id ="name">BLOG</div><span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/blog.html"><div id ="name">BLOG</div><span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#"><div id ="name">SETUP</div><span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/setup.html"><div id ="name">SETUP</div><span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item ">
-                        <a class="nav-link" href="#"><div id ="name">GALARY</div><span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/galary.html"><div id ="name">GALLERY <!--THANKS YASEEN :)--> </div><span class="sr-only">(current)</span></a> 
                       </li>
                     </ul>
 
@@ -80,11 +80,11 @@
             <div class="row h-50">
                 <div class="col-1"></div>
                 <div class="col-11  my-auto">
-                        <h1>//Hello, I'm 
+                        <h1>//Hi, I'm 
                             <span
                                class="txt-rotate"
-                               data-period="3000"
-                               data-rotate='[ "a developer", "a software engineer", "a team player", "Amaan...." ]'></span>
+                               data-period="2000"
+                               data-rotate='[ "Amaan.", "a developer", "a software engineer", "a photographer", "a team player"]'></span>
                           </h1>
 
                           I'm a student Heriot-Watt studying Computer Science 
