--- a/setup.html
+++ b/setup.html
@@ -53,14 +53,8 @@
 
 
         
-      
-          <div class ="container-fluid">
-                        <h1>//My 
-                            <span
-                               class="txt-rotate"
-                               data-period="2000"
-                               data-rotate='[ "Setup.", "workstation", "gear", "work flow", "tools"]'></span>
-        </div>
+      <!--
+        <div class="container-fluid">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -82,8 +76,77 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+        </div>
+        -->
 
 
+
+        <!--Header-->
+    <header>
+        <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1>//My 
+                <span
+                   class="txt-rotate"
+                   data-period="2000"
+                   data-rotate='[ "Setup.", "workstation", "gear", "work flow", "tools"]'></span>
+                </div>
+      </div>
+    </header>
+
+
+      <!--DESKTOP HEADING-->
+      <div class="container-fluid padding">
+        <div class="row text-center">
+          <div class="col-12">
+            <h1 class="display-4">The Desktop</h1>
+          </div>
+          <hr>
+        </div>
+      </div>
+
+      <!--Desktop Cards-->
+      <div class="container-fluid padding text-center">
+      <div class="row padding">
+        <div class="col-md-3">
+          <div class="card bg-dark">
+            <img class="card-img-top " src="https://images-na.ssl-images-amazon.com/images/I/81NDyMBh0GL._AC_SL1500_.jpg">
+            <div class="card-body">
+              <h4 class="card-title">iiyama GB2560HSU-B1 (Primary Monitor)</h4>
+              <P class="card-text">This is my primary monitor on my desktop, it has a 140hz refresh rate
+                 allowing me to scroll through my code extra smothly and definitely not for playing games (:</P>
+                 <a href="https://www.amazon.co.uk/iiyama-GB2560HSU-B1-G-Master-Monitor-Freesync/dp/B07CZ7RJXJ/ref=sr_1_5?dchild=1&keywords=iyamma%2B140hz&qid=1589762176&sr=8-5&th=1" class="btn btn-secondary">Buy Here</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card bg-dark">
+            <img class="card-img-top" src="https://brain-images-ssl.cdn.dixons.com/5/1/10178715/u_10178715.jpg">
+            <div class="card-body">
+              <h4 class="card-title">DELL S2419HN Full (Seccondary Monitor)</h4>
+              <P class="card-text">This is my seccondary monitor, Its IPS tech makes it ideal for reviewing media content, testing my implementations and
+                browsing the web, definitely not for watching netflix (:</P> 
+                <a href="https://www.currys.co.uk/gbuk/computing/pc-monitors/pc-monitors/dell-s2419hn-full-hd-24-ips-monitor-black-10178715-pdt.html" class="btn btn-secondary ">Buy Here</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card bg-dark">
+            <img class="card-img-top" src="img/setup/pc.jpg">
+            <div class="card-body">
+              <h4 class="card-title">The Purple Box (My Desktop)</h4>
+              <P class="card-text">This is my custom built pc, it includes a Ryzen 5 3600 coupled along with an RTX 2070 and 32GB of 3600MHz Ram. It is very fast. Currently running 
+                windows, planning on migrating to a linux. </P>
+                <a href="https://pcpartpicker.com/list/NdwJXv" class="btn btn-secondary">Parts List</a>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+      </div>
 
 
 
