--- a/setup.html
+++ b/setup.html
@@ -95,21 +95,21 @@
     </header>
 
 
-      <!--DESKTOP HEADING-->
+      <!--Workstation HEADING-->
       <div class="container-fluid padding">
         <div class="row text-center">
           <div class="col-12">
-            <h1 class="display-4">The Desktop</h1>
+            <h1 class="display-4">My Workstation</h1>
           </div>
           <hr>
         </div>
       </div>
 
       <!--Desktop Cards-->
-      <div class="container-fluid padding text-center">
+      <div class="container-fluid padding ">
       <div class="row padding">
-        <div class="col-md-4">
-          <div class="card bg-dark">
+        <div class="col">
+          <div class="card bg-dark mx-auto my-auto" style="width: 20rem;">
             <img class="card-img-top " src="https://images-na.ssl-images-amazon.com/images/I/81NDyMBh0GL._AC_SL1500_.jpg">
             <div class="card-body">
               <h4 class="card-title">iiyama GB2560HSU-B1 (Primary Monitor)</h4>
@@ -120,30 +120,41 @@
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="card bg-dark">
+        <div class="col">
+          <div class="card bg-dark mx-auto my-auto" style="width: 20rem;">
             <img class="card-img-top" src="https://brain-images-ssl.cdn.dixons.com/5/1/10178715/u_10178715.jpg">
             <div class="card-body">
-              <h4 class="card-title">DELL S2419HN Full (Seccondary Monitor)</h4>
+              <h4 class="card-title">DELL S2419HN (Seccondary Monitor)</h4>
               <P class="card-text">This is my seccondary monitor, Its IPS tech makes it ideal for reviewing media content, testing my implementations and
-                browsing the web, definitely not for watching netflix (:</P> 
+                browsing the web, definitely not for netflix (:</P> 
                 <a href="https://www.currys.co.uk/gbuk/computing/pc-monitors/pc-monitors/dell-s2419hn-full-hd-24-ips-monitor-black-10178715-pdt.html" class="btn btn-secondary ">Buy Here</a>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="card bg-dark">
-            <img class="card-img-top" src="img/setup/pc.jpg">
+        <div class="col">
+          <div class="card bg-dark mx-auto my-auto" style="width: 20rem;">
+            <img class="card-img-top " src="img/setup/pc.jpg">
             <div class="card-body">
               <h4 class="card-title">The Purple Box (My Desktop)</h4>
               <P class="card-text">This is my custom built pc, it includes a Ryzen 5 3600 coupled along with an RTX 2070 and 32GB of 3600MHz Ram. It is very fast. Currently running 
-                windows, planning on migrating to a linux. </P>
+                windows, planning on migrating to linux. Not for games btw. </P>
                 <a href="https://pcpartpicker.com/list/NdwJXv" class="btn btn-secondary">Parts List</a>
             </div>
           </div>
         </div>
 
+        <div class="col">
+          <div class="card bg-dark mx-auto my-auto" style="width: 20rem;">
+            <img class="card-img-top" src="img/setup/pc.jpg">
+            <div class="card-body">
+              <h4 class="card-title">The Purple Box (My Desktop)</h4>
+              <P class="card-text">This is my custom built pc, it includes a Ryzen 5 3600 coupled along with an RTX 2070 and 32GB of 3600MHz Ram. It is very fast. Currently running 
+                windows, planning on migrating to linux. Not for games btw. </P>
+                <a href="https://pcpartpicker.com/list/NdwJXv" class="btn btn-secondary">Parts List</a>
+            </div>
+          </div>
+        </div>
 
       </div>
       </div>
