more images, more grid stuff

--- a/setup.html
+++ b/setup.html
@@ -101,16 +101,17 @@
           <div class="col-12">
             <h1 class="display-4">My Workstation</h1>
           </div>
-          <hr>
+         
         </div>
+         <hr  class="mt-2 mb-3">
       </div>
 
       <!--Desktop Cards-->
-      <div class="container-fluid padding ">
-      <div class="row padding">
+      <div class="container-fluid">
+      <div class="row">
         <div class="col">
-          <div class="card bg-dark mx-auto my-auto" style="width: 20rem;">
-            <img class="card-img-top " src="https://images-na.ssl-images-amazon.com/images/I/81NDyMBh0GL._AC_SL1500_.jpg">
+          <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
+            <img class="card-img-top " src="img/setup/monitor1.jpg">
             <div class="card-body">
               <h4 class="card-title">iiyama GB2560HSU-B1 (Primary Monitor)</h4>
               <P class="card-text">This is my primary monitor on my desktop, it has a 140hz refresh rate
@@ -121,8 +122,8 @@
         </div>
 
         <div class="col">
-          <div class="card bg-dark mx-auto my-auto" style="width: 20rem;">
-            <img class="card-img-top" src="https://brain-images-ssl.cdn.dixons.com/5/1/10178715/u_10178715.jpg">
+          <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
+            <img class="card-img-top" src="img/setup/monitor2.jpg">
             <div class="card-body">
               <h4 class="card-title">DELL S2419HN (Seccondary Monitor)</h4>
               <P class="card-text">This is my seccondary monitor, Its IPS tech makes it ideal for reviewing media content, testing my implementations and
@@ -133,7 +134,7 @@
         </div>
 
         <div class="col">
-          <div class="card bg-dark mx-auto my-auto" style="width: 20rem;">
+          <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
             <img class="card-img-top " src="img/setup/pc.jpg">
             <div class="card-body">
               <h4 class="card-title">The Purple Box (My Desktop)</h4>
@@ -145,13 +146,13 @@
         </div>
 
         <div class="col">
-          <div class="card bg-dark mx-auto my-auto" style="width: 20rem;">
-            <img class="card-img-top" src="img/setup/pc.jpg">
+          <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
+            <img class="card-img-top" src="img/setup/Alexa.jpg">
             <div class="card-body">
-              <h4 class="card-title">The Purple Box (My Desktop)</h4>
-              <P class="card-text">This is my custom built pc, it includes a Ryzen 5 3600 coupled along with an RTX 2070 and 32GB of 3600MHz Ram. It is very fast. Currently running 
-                windows, planning on migrating to linux. Not for games btw. </P>
-                <a href="https://pcpartpicker.com/list/NdwJXv" class="btn btn-secondary">Parts List</a>
+              <h4 class="card-title">Amazon Alexa Dot (FBI spy tool)</h4>
+              <P class="card-text">My choice of invasion of privacy is my amazon alexa, its job is to listen and record all my conversations and send them to the fbi. I also use it to
+                controll my two hue bulbs and also play some spotify. </P>
+                <a href="https://www.amazon.co.uk/dp/B07PJV3JPR/ref=s9_acsd_ri_bw_c2_x_0_t?pf_rd_m=A3P5ROKL5A1OLE&pf_rd_s=merchandised-search-2&pf_rd_r=ZJXRRNGBVMXMNE06NZNE&pf_rd_t=101&pf_rd_p=4d2f5e5e-97de-4808-8c04-ef891a8c3a80&pf_rd_i=14100223031" class="btn btn-secondary">Buy Here</a>
             </div>
           </div>
         </div>
