bootstrap --> MDB, also go macaron begin!

--- a/setup.html
+++ b/setup.html
@@ -6,7 +6,12 @@
    <script src="https://kit.fontawesome.com/d1ec1bd279.js" crossorigin="anonymous"></script>
    
    <!-- Yes i used bootstrap OOOKkkk mbbb-->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+   <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
    <link rel="stylesheet" href="style.css"/>
    <title>Amaan</title>
 </head>
@@ -115,7 +120,7 @@
             <div class="card-body">
               <h4 class="card-title">iiyama GB2560HSU-B1 (Primary Monitor)</h4>
               <P class="card-text">This is my primary monitor on my desktop, it has a 140hz refresh rate
-                 allowing me to scroll through my code extra smothly and definitely not for playing games (:</P>
+                 allowing me to scroll through my code extra smoothly and definitely not for playing games (:</P>
                  <a href="https://www.amazon.co.uk/iiyama-GB2560HSU-B1-G-Master-Monitor-Freesync/dp/B07CZ7RJXJ/ref=sr_1_5?dchild=1&keywords=iyamma%2B140hz&qid=1589762176&sr=8-5&th=1" class="btn btn-secondary">Buy Here</a>
             </div>
           </div>
@@ -125,8 +130,8 @@
           <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
             <img class="card-img-top" src="img/setup/monitor2.jpg">
             <div class="card-body">
-              <h4 class="card-title">DELL S2419HN (Seccondary Monitor)</h4>
-              <P class="card-text">This is my seccondary monitor, Its IPS tech makes it ideal for reviewing media content, testing my implementations and
+              <h4 class="card-title">DELL S2419HN (Secondary Monitor)</h4>
+              <P class="card-text">This is my secondary monitor, Its IPS tech makes it ideal for reviewing media content, testing my implementations and
                 browsing the web, definitely not for netflix (:</P> 
                 <a href="https://www.currys.co.uk/gbuk/computing/pc-monitors/pc-monitors/dell-s2419hn-full-hd-24-ips-monitor-black-10178715-pdt.html" class="btn btn-secondary ">Buy Here</a>
             </div>
