--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
      <!-- apparently we need these meta tags -->
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--Font Aweseom (:-->
-    <script src="https://kit.fontawesome.com/d1ec1bd279.js" crossorigin="anonymous"></script>
+ <!-- Font Awesome -->
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     
     <!-- Yes i used bootstrap OOOKkkk mbbb-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
     <title>Amaan</title>
 </head>
@@ -80,14 +85,14 @@
             <div class="row h-50">
                 <div class="col-1"></div>
                 <div class="col-11  my-auto">
-                        <h1>//Hi, I'm 
+                        <h1 style="font-weight:450;">//Hi, I'm 
                             <span
                                class="txt-rotate"
                                data-period="2000"
                                data-rotate='[ "Amaan.", "a developer", "a software engineer", "a photographer", "a team player"]'></span>
                           </h1>
 
-                          I'm a student Heriot-Watt studying Computer Science 
+                          I'm a student at Heriot-Watt studying Computer Science 
                 </div>
             </div>
         </div>
