--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,32 @@
         </div>
     </nav>
 
-    
+
+
+
+    <div class="container">
+    <h1>First Blog Entry</h1>
+    <h3>21st June 2020 01:54</h3>
+    <p>Ok, so this website is currently a mess right now, however, I really need to start getting my sh- together, I have just quit working at Amazon
+      as a 'fufilment associate' (Sounds cooler than it actually is). Now it's time to get back into coding, finally. So uh ill make a list, and hopefuly update any progress?
+      idk how this whole blog thing works but meh here we go:
+      </p>
+       <br> -Learn flutter and create a few apps maybe?
+       <br> -Fix this stupid website so it looks half decent on mobile
+       <br> -Do some more Go programming 
+       <br> -Brush up on OOP concepts & data structures and algs 
+       <br> -Consider migrating this website to go-macaron or hugo eventually
+       <br> -Fix up this website 
+       <br> -Oh yeh fix up this website
+       
+       <p>
+       Also need to start thinking about what im going to do for my final year project, that will be though. Anyway doubt anyone will read this just needed to throw my thoughts 
+       outhere somwhere, heads been all over the place recently. List will most likely be more refined as the days go on...
+       </p>
+
+       <br> Goodnight. 
+       <br> ps yaseen stop being anoying
+      </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
