probs a good idea to use html lists lmao

--- a/blog.html
+++ b/blog.html
@@ -65,13 +65,18 @@
       as a 'fufilment associate' (Sounds cooler than it actually is). Now it's time to get back into coding, finally. So uh ill make a list, and hopefuly update any progress?
       idk how this whole blog thing works but meh here we go:
       </p>
-       <br> -Learn flutter and create a few apps maybe?
-       <br> -Fix this stupid website so it looks half decent on mobile
-       <br> -Do some more Go programming 
-       <br> -Brush up on OOP concepts & data structures and algs 
-       <br> -Consider migrating this website to go-macaron or hugo eventually
-       <br> -Fix up this website 
-       <br> -Oh yeh fix up this website
+      <ul>
+       <li>Learn flutter </li>
+       <li>create a few apps maybe?</li> 
+       <li>Mobile friendly this website pls </li>
+       <li>Do more stuff in Go </li>
+       <li>Brush up on OOP concepts </li>
+       <li>Brus up on data structures and algs </li>
+       <li>Consider migration to go-macaron or hugo </li>
+       <li>Fix up this website </li>
+       <li>Oh yeh fix up this website </li>
+       <li>Switch to linux again lol</li>
+      </ul>
        
        <p>
        Also need to start thinking about what im going to do for my final year project, that will be though. Anyway doubt anyone will read this just needed to throw my thoughts 
