smaller pics, new blog entry

--- a/setup.html
+++ b/setup.html
@@ -116,7 +116,7 @@
       <div class="row">
         <div class="col">
           <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
-            <img class="card-img-top " src="img/setup/monitor1.jpg">
+            <img class="card-img-top " src="img/setup/monitor1500.jpg">
             <div class="card-body">
               <h4 class="card-title">iiyama GB2560HSU-B1 (Primary Monitor)</h4>
               <P class="card-text">This is my primary monitor on my desktop, it has a 140hz refresh rate
@@ -128,7 +128,7 @@
 
         <div class="col">
           <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
-            <img class="card-img-top" src="img/setup/monitor2.jpg">
+            <img class="card-img-top" src="img/setup/monitor2500.jpg">
             <div class="card-body">
               <h4 class="card-title">DELL S2419HN (Secondary Monitor)</h4>
               <P class="card-text">This is my secondary monitor, Its IPS tech makes it ideal for reviewing media content, testing my implementations and
@@ -140,7 +140,7 @@
 
         <div class="col">
           <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
-            <img class="card-img-top " src="img/setup/pc.jpg">
+            <img class="card-img-top " src="img/setup/pc500.jpg">
             <div class="card-body">
               <h4 class="card-title">The Purple Box (My Desktop)</h4>
               <P class="card-text">This is my custom built pc, it includes a Ryzen 5 3600 coupled along with an RTX 2070 and 32GB of 3600MHz Ram. It is very fast. Currently running 
@@ -152,7 +152,7 @@
 
         <div class="col">
           <div class="card bg-dark mx-auto my-auto" style="width: 25rem;">
-            <img class="card-img-top" src="img/setup/Alexa.jpg">
+            <img class="card-img-top" src="img/setup/Alexa500.jpg">
             <div class="card-body">
               <h4 class="card-title">Amazon Alexa Dot (FBI spy tool)</h4>
               <P class="card-text">My choice of invasion of privacy is my amazon alexa, its job is to listen and record all my conversations and send them to the fbi. I also use it to
