--- a/blog.html
+++ b/blog.html
@@ -77,8 +77,8 @@
       </p>
 
       <p>
-        Final thing, I need to add that benner thingy on this page kinda like the setup page, keep the theme consistent. Also a better way to organize each blog entry
-        hmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
+        Final thing, I need to add that banner thingy on this page kinda like the setup page, keep the theme consistent. Also need to 
+        figure out a better way to organize each blog entry hmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
       </p>
      
       Goodnight.
