--- a/blog.html
+++ b/blog.html
@@ -60,6 +60,56 @@
 
     <div class="container">
 
+      <h1>Flutter Day 1</h1>
+      <h3>24th June 2020 09:54</h3>
+      <p>First of all if you are reading this and your name starts with a Y and ends with a N, go away</p>
+      
+      <p>
+        Ok, Good Morning, I created my first Flutter app and coded in dart for the first time!! I've learned a lot 
+        but also slightly overwhelmed by how different it is to code in dart, especially since I've only really done 
+        front end coding in HTML/CSS. 
+      </p>
+
+      <p>
+        So following the tutorial from the <a href="https://flutter.dev/docs/get-started/install">  Fluter docs</a> 
+        I created an app that randomly generates startup company names by taking a random pair of popular words in the English language 
+        and displaying them in an infinite list view, This was done using an open source package called 
+        <a href"https://pub.dev/packages/english_words">english_words</a>. 
+        (btw just looking through all the open source packages available on <a href="https://pub.dev/">pub.dev</a> is getting me hyped).
+        I extended the app to allow the user to save a word pair in the case they liked it. 
+        <a href= "https://github.com/amaan-akram/CompanyNameGen"> Link to app on github </a>
+      </p>
+
+      <p>
+        So, some things I noted with Flutter, as i've said before it is pretty different from anything else I have used
+        to code with especially it's structure: 
+        <br>Everything is based around what they call 'widgets'. so the text on an app 
+        is a widget the padding surrounding the text is a widget, the title bar of the app is a widget and the whole app 
+        itself is a widget. 
+        <br> So far from what I can tell there are two different types of widgets; 
+        <b>Stateless Widgets</b> - which are immutable so typically used for fixed variables such as titles or colors, and 
+        <b>Stateful widgets</b> - which typically expect some sort of change to occur within the application. When creating 
+        a Stateful widget however, two classes must be created; first a StatefulWidget class that creates an instance of 
+        a State class which is the second class you create. So actually the StatefulWidget class itself is immutable but the 
+        State class itself stays alive during the lifetime of that widget! Yea ik kinda confusing but its ok, we move thanks
+        to VScode's flutter extension I can quickly generate boiler plate code to do all this for me :)
+      </p>
+
+      <p>
+        Something cool about flutter is how easy it is to test and develop full on native applications that are automatically 
+        cross platform, for starters simply plugging in my phone via usb to my computer allows me to test my app on my actual 
+        device! pretty cool. Also it's ability to test on cross platform is crazy to me, I can run it natively an IOS emulator,
+        run it on my physical android phone, but also run it as a web app on my browser?? (<a href="https://flutter.dev/docs/get-started/web">beta</a>).
+      </p>
+
+      <p>
+        Anyway yeh thats what I did yesterday, today im going to carry on with Flutter development and create more apps!
+        Later on I might include code examples and talk  through them rather than just being a giant wall of text, I still need 
+        to organize this page, lmfao ill do it one day. Anyway its a really nice day outside so im gonna go out and enjoy the sun
+      </p>
+      bye bye losers.
+      <hr>
+
       <h1>Starting with flutter</h1>
       <h3>23st June 2020 23:46</h3>
       <p>Ok, so i didn't do much yesterday woops, well I did stuff just nothing cs related, but today/tomorrow will be the start of my 
@@ -78,7 +128,7 @@
 
       <p>
         Final thing, I need to add that banner thingy on this page kinda like the setup page, keep the theme consistent. Also need to 
-        figure out a better way to organize each blog entry hmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
+        figure out a better way to organize each blog entry hmmmmmmmm
       </p>
      
       Goodnight.
