--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
     <div class="container">
 
       <h1>Flutter Day 1</h1>
-      <h3>24th June 2020 09:54</h3>
+      <h3>25th June 2020 09:54</h3>
       <p>First of all if you are reading this and your name starts with a Y and ends with a N, go away</p>
       
       <p>
@@ -110,8 +110,15 @@
       bye bye losers.
       <hr>
 
+
+
+
+
+
+
+
       <h1>Starting with flutter</h1>
-      <h3>23st June 2020 23:46</h3>
+      <h3>23rd June 2020 23:46</h3>
       <p>Ok, so i didn't do much yesterday woops, well I did stuff just nothing cs related, but today/tomorrow will be the start of my 
         flutter stuff, I've fully setup flutter on my desktop, and now im going to setup on my laptop before I sleep, and tomorrow morning i 
       will create my first flutter app, probably just a note taking app or some sort of planner. either way i will learn!</p>
@@ -136,6 +143,17 @@
       PS Yaseen i sry :C
 
       <hr>
+
+
+
+
+
+
+
+
+
+
+
 
       <h1>First Blog Entry</h1>
       <h3>21st June 2020 01:54</h3>
@@ -164,6 +182,9 @@
         <br> Goodnight. 
         <br> ps yaseen stop being annoying
         </div>
+
+
+        
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
