--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,21 @@
     </nav>
 
 
+    
+        <!--Header-->
+        <header>
+          <div class="jumbotron jumbotron-fluid" id="blogHeader">
+          <div class="container">
+              <h1>//My 
+                  <span
+                     class="txt-rotate"
+                     data-period="2000"
+                     data-rotate='[ "Blog.", "notes", "thoughts", "uhh idk", "fdsafdsa"]'></span>
+                  </div>
+        </div>
+      </header>
+
+
 
 
     <div class="container">
@@ -117,4 +132,6 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    </body>
+  <script src="scripts/text-type.js"></script>    
+
+</body>
