--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="style.css"/>
+   <link rel="stylesheet" href="css/style.css"/>
    <title>Amaan</title>
 </head>
  
