--- a/blog.html
+++ b/blog.html
@@ -323,6 +323,7 @@
     crossorigin="anonymous"></script>
   <script src="scripts/text-type.js"></script>
   <script src="scripts/hidden.js"></script>
+  <script data-goatcounter="https://amaanakram.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
 
 
