--- a/setup.html
+++ b/setup.html
@@ -312,4 +312,5 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script src="scripts/text-type.js"></script>
+  <script data-goatcounter="https://amaanakram.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
