fiix: setup imgs

--- a/setup.html
+++ b/setup.html
@@ -205,8 +205,8 @@
     <div class="card mb-4">
       <!-- Card image -->
       <div class="view overlay">
-        <img class="card-img-top" src="img/setup/Alexa500.jpg" alt="Card image cap">
-        <a href="img/setup/Alexa.jpg">
+        <img class="card-img-top" src="img/setup/keyboard500.jpg" alt="Card image cap">
+        <a href="img/setup/keyboard.jpg">
           <div class="mask rgba-white-slight"></div>
         </a>
       </div>
@@ -230,8 +230,8 @@
     <div class="card mb-4">
       <!-- Card image -->
       <div class="view overlay">
-        <img class="card-img-top" src="img/setup/Alexa500.jpg" alt="Card image cap">
-        <a href="img/setup/Alexa.jpg">
+        <img class="card-img-top" src="img/setup/mouse.jpg" alt="Card image cap">
+        <a href="img/setup/mouse.jpg">
           <div class="mask rgba-white-slight"></div>
         </a>
       </div>
