lil setup page update

--- a/setup.html
+++ b/setup.html
@@ -78,6 +78,19 @@
   </header>
 
 
+
+   <!--mYStack HEADING-->
+   <div class="container-fluid padding">
+    <div class="row text-center">
+      <div class="col-12">
+        <h1 class="display-4">My Stack</h1>
+      </div>
+
+    </div>
+    <hr class="mt-2 mb-3">
+  </div>
+
+
   <!--Workstation HEADING-->
   <div class="container-fluid padding">
     <div class="row text-center">
