--- a/setup.html
+++ b/setup.html
@@ -268,6 +268,62 @@
   </div>
 
 
+  <!--Card Row 3-->
+  <div class="card-deck">
+
+    <div class="card mb-4">
+      <!-- Card image -->
+      <div class="view overlay">
+        <img class="card-img-top" src="https://lh3.googleusercontent.com/proxy/1bwqTaph63CzTkC8WH8ZoRFJ_j1FIK44ahn3Ls46-u7IqZrB9hKbqV9848lU4xvBba_M3DUkmQJQ5VILGsSO7eMKieyiq0IDFjmi5xpeWhuvFwGVGIfzRqSTtP-m8grBzxWuNX6k-VlgStfK_Q" alt="Card image cap">
+        <a href="https://lh3.googleusercontent.com/proxy/1bwqTaph63CzTkC8WH8ZoRFJ_j1FIK44ahn3Ls46-u7IqZrB9hKbqV9848lU4xvBba_M3DUkmQJQ5VILGsSO7eMKieyiq0IDFjmi5xpeWhuvFwGVGIfzRqSTtP-m8grBzxWuNX6k-VlgStfK_Q">
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+      <!-- Card content -->
+      <div class="card-body elegant-color white-text rounded-bottom">
+
+        <!-- Title -->
+        <h4 class="card-title">Hyper-X Cloud2 Headset</h4>
+        <hr class="hr">
+        <!-- Text -->
+        <p class="card-text white-text mb-4">Been using this headset since 2016. Quick shoutout to r/headphoens, picked these over other headsets for a couple of reasons. First 
+          the fact that their pretty understated and not very offensive in terms of design. Also sound quality, the drivers are made by by Beyerdynamics, an audophile comapany, and infact they are 
+          just a rebranded <a href="https://www.head-fi.org/showcase/takstar-pro-80.14845/">Takstar Pro 80</a>. So an audiophile grade headphone with the added bonus of a mic. 
+        </p>
+        <!-- Link -->
+        <a href="https://www.amazon.co.uk/HyperX-Gaming-Headset-Mobile-Gunmetal/dp/B00SAYCVTQ/ref=sr_1_3?dchild=1&keywords=hyperx+cloud+2&qid=1594679302&sr=8-3" class="btn btn-secondary">Buy Here</a>
+      </div>
+    </div>
+
+
+    <div class="card mb-4">
+      <!-- Card image -->
+      <div class="view overlay">
+        <img class="card-img-top" src="img/setup/Alexa500.jpg" alt="Card image cap">
+        <a href="img/setup/Alexa.jpg">
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+      <!-- Card content -->
+      <div class="card-body elegant-color white-text rounded-bottom">
+
+        <!-- Title -->
+        <h4 class="card-title">Something else t</h4>
+        <hr class="hr">
+        <!-- Text -->
+        <p class="card-text white-text mb-4">blah blah blah something else idk what but soimething lese on my desk.....
+        </p>
+        <!-- Link -->
+        <a href="https://www.amazon.co.uk/dp/B07PJV3JPR/ref=s9_acsd_ri_bw_c2_x_0_t?pf_rd_m=A3P5ROKL5A1OLE&pf_rd_s=merchandised-search-2&pf_rd_r=ZJXRRNGBVMXMNE06NZNE&pf_rd_t=101&pf_rd_p=4d2f5e5e-97de-4808-8c04-ef891a8c3a80&pf_rd_i=14100223031" class="btn btn-secondary">Buy Here</a>
+      </div>
+    </div>
+
+
+  </div>
+
+
   </div>
 
 </div>
