--- a/blog.html
+++ b/blog.html
@@ -110,7 +110,7 @@
                     feel a little more personal, but it's just kinda turned into a place where I flex all my stuff. oh well it iz what it iz.
                 </p>
                 <p>
-                    Anyway going back to the point, Also added a site tracker to see how much traffic I've been getting on 
+                    Anyway going back to the point, also added a site tracker to see how much traffic I've been getting on 
                     this website. you Get to see some cool statistics such as what devices people are using and what country everyone is from. It's pretty 
                     cool wont lie. 
                 </p>
