--- a/setup.html
+++ b/setup.html
@@ -288,7 +288,7 @@
         <hr class="hr">
         <!-- Text -->
         <p class="card-text white-text mb-4">Been using this headset since 2016. Quick shoutout to r/headphoens, picked these over other headsets for a couple of reasons. First 
-          the fact that their pretty understated and not very offensive in terms of design. Also sound quality, the drivers are made by by Beyerdynamics, an audophile comapany, and infact they are 
+          the fact that their pretty understated and not very offensive in terms of design. Also sound quality, the drivers are made by Beyerdynamics, an audiophile company, and actually they are 
           just a rebranded <a href="https://www.head-fi.org/showcase/takstar-pro-80.14845/">Takstar Pro 80</a>. So an audiophile grade headphone with the added bonus of a mic. 
         </p>
         <!-- Link -->
