setup page- chair

--- a/setup.html
+++ b/setup.html
@@ -310,13 +310,13 @@
       <div class="card-body elegant-color white-text rounded-bottom">
 
         <!-- Title -->
-        <h4 class="card-title">Something else t</h4>
+        <h4 class="card-title">My Chair</h4>
         <hr class="hr">
         <!-- Text -->
-        <p class="card-text white-text mb-4">blah blah blah something else idk what but soimething lese on my desk.....
+        <p class="card-text white-text mb-4">Bought this random chair on amazon, looks nice and all but not the most comfertable, will most likely change soon....
         </p>
         <!-- Link -->
-        <a href="https://www.amazon.co.uk/dp/B07PJV3JPR/ref=s9_acsd_ri_bw_c2_x_0_t?pf_rd_m=A3P5ROKL5A1OLE&pf_rd_s=merchandised-search-2&pf_rd_r=ZJXRRNGBVMXMNE06NZNE&pf_rd_t=101&pf_rd_p=4d2f5e5e-97de-4808-8c04-ef891a8c3a80&pf_rd_i=14100223031" class="btn btn-secondary">Buy Here</a>
+        <a href="https://www.amazon.co.uk/mfavour-Ergonomic-Adjustable-Headrest-Function/dp/B07P6HYSZR/" class="btn btn-secondary">Buy Here</a>
       </div>
     </div>
 
