setup - chair- temp img

--- a/setup.html
+++ b/setup.html
@@ -300,8 +300,8 @@
     <div class="card mb-4">
       <!-- Card image -->
       <div class="view overlay">
-        <img class="card-img-top" src="img/setup/Alexa500.jpg" alt="Card image cap">
-        <a href="img/setup/Alexa.jpg">
+        <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/71lbhX4s69L._AC_SL1500_.jpg" alt="Card image cap">
+        <a href="https://images-na.ssl-images-amazon.com/images/I/71lbhX4s69L._AC_SL1500_.jpg">
           <div class="mask rgba-white-slight"></div>
         </a>
       </div>
