setup page imgs

--- a/setup.html
+++ b/setup.html
@@ -267,15 +267,15 @@
 
   </div>
 
-
+  
   <!--Card Row 3-->
   <div class="card-deck">
 
     <div class="card mb-4">
       <!-- Card image -->
       <div class="view overlay">
-        <img class="card-img-top" src="https://lh3.googleusercontent.com/proxy/1bwqTaph63CzTkC8WH8ZoRFJ_j1FIK44ahn3Ls46-u7IqZrB9hKbqV9848lU4xvBba_M3DUkmQJQ5VILGsSO7eMKieyiq0IDFjmi5xpeWhuvFwGVGIfzRqSTtP-m8grBzxWuNX6k-VlgStfK_Q" alt="Card image cap">
-        <a href="https://lh3.googleusercontent.com/proxy/1bwqTaph63CzTkC8WH8ZoRFJ_j1FIK44ahn3Ls46-u7IqZrB9hKbqV9848lU4xvBba_M3DUkmQJQ5VILGsSO7eMKieyiq0IDFjmi5xpeWhuvFwGVGIfzRqSTtP-m8grBzxWuNX6k-VlgStfK_Q">
+        <img class="card-img-top" src="img/setup/headphones500.jpg" alt="Card image cap">
+        <a href="img/setup/headphones.jpg">
           <div class="mask rgba-white-slight"></div>
         </a>
       </div>
@@ -300,8 +300,8 @@
     <div class="card mb-4">
       <!-- Card image -->
       <div class="view overlay">
-        <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/71lbhX4s69L._AC_SL1500_.jpg" alt="Card image cap">
-        <a href="https://images-na.ssl-images-amazon.com/images/I/71lbhX4s69L._AC_SL1500_.jpg">
+        <img class="card-img-top" src="img/setup/chair500.jpg" alt="Card image cap">
+        <a href="img/setup/chair.jpg">
           <div class="mask rgba-white-slight"></div>
         </a>
       </div>
@@ -321,10 +321,33 @@
     </div>
 
 
-  </div>
+    <div class="card mb-4">
+      <!-- Card image -->
+      <div class="view overlay">
+        <img class="card-img-top" src="img/setup/hue500.jpg" alt="Card image cap">
+        <a href="img/setup/hue.jpg">
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+      <!-- Card content -->
+      <div class="card-body elegant-color white-text rounded-bottom">
+
+        <!-- Title -->
+        <h4 class="card-title">Philips Hue Bulbs</h4>
+        <hr class="hr">
+        <!-- Text -->
+        <p class="card-text white-text mb-4">Really overpriced bulbs, pretty cool and all, work well with alexa, planning on getting the hue bridge eventually allowing me
+          to do alot more with them vs controlling via bluetooth.
+        </p>
+        <!-- Link -->
+        <a href="https://www.amazon.co.uk/mfavour-Ergonomic-Adjustable-Headrest-Function/dp/B07P6HYSZR/" class="btn btn-secondary">Buy Here</a>
+      </div>
+    </div>
 
 
   </div>
+  
 
 </div>
 
