--- a/setup.html
+++ b/setup.html
@@ -338,10 +338,10 @@
         <hr class="hr">
         <!-- Text -->
         <p class="card-text white-text mb-4">Really overpriced bulbs, pretty cool and all, work well with alexa, planning on getting the hue bridge eventually allowing me
-          to do alot more with them vs controlling via bluetooth.
+          to do alot more with them vs controlling via bluetooth. Usually just leave the lamp on a purpleish color and my main room a warmish white, because blue light bad!
         </p>
         <!-- Link -->
-        <a href="https://www.amazon.co.uk/mfavour-Ergonomic-Adjustable-Headrest-Function/dp/B07P6HYSZR/" class="btn btn-secondary">Buy Here</a>
+        <a href="https://www.amazon.co.uk/Philips-Ambiance-Bayonet-Bluetooth-Assistant/dp/B07V5CM1DW/" class="btn btn-secondary">Buy Here</a>
       </div>
     </div>
 
