--- a/setup.html
+++ b/setup.html
@@ -79,7 +79,10 @@
 
 
 
-   <!--mYStack HEADING-->
+  
+  <div class="container">
+
+     <!--mYStack HEADING-->
    <div class="container-fluid padding">
     <div class="row text-center">
       <div class="col-12">
@@ -89,6 +92,91 @@
     </div>
     <hr class="mt-2 mb-3">
   </div>
+
+    <div class="card-deck">
+  
+  
+  
+      <div class="card mb-4">
+        <!-- Card image -->
+        <div class="view overlay">
+          <img class="card-img-top" src="https://www.brandeps.com/logo-download/J/Java-logo-vector-01.svg" alt="Card image cap">
+          <a href="https://www.brandeps.com/logo-download/J/Java-logo-vector-01.svg">
+            <div class="mask rgba-white-slight"></div>
+          </a>
+        </div>
+  
+        <!-- Card content -->
+        <div class="card-body elegant-color white-text rounded-bottom">
+  
+          <!-- Title -->
+          <h4 class="card-title">Java</h4>
+          <hr class="hr">
+          <!-- Text -->
+          <p class="card-text white-text mb-4">Used java throughout university completed the majority of my coursework with java
+                                                and it was the language I first learned how to program in, teaching me OOP concepts
+          </p>
+  
+        </div>
+      </div>
+
+
+
+
+      <div class="card mb-4">
+        <!-- Card image -->
+        <div class="view overlay">
+          <img class="card-img-top" src="https://www.brandeps.com/logo-download/P/Python-logo-vector-01.svg" alt="Card image cap">
+          <a href="https://www.brandeps.com/logo-download/P/Python-logo-vector-01.svg">
+            <div class="mask rgba-white-slight"></div>
+          </a>
+        </div>
+  
+        <!-- Card content -->
+        <div class="card-body elegant-color white-text rounded-bottom">
+  
+          <!-- Title -->
+          <h4 class="card-title">Python</h4>
+          <hr class="hr">
+          <!-- Text -->
+          <p class="card-text white-text mb-4"> Python is a language I've always had experience in, even before starting university, 
+                                                I use it often to quickly prototype or test out quick algorithms. I also use python 
+                                                to automate some frequent tasks to make my life easier, so in theory python is the most 
+                                                useful language for me.
+          </p>
+  
+        </div>
+      </div>
+
+
+      
+      <div class="card mb-4">
+        <!-- Card image -->
+        <div class="view overlay">
+          <img class="card-img-top" src="https://www.brandeps.com/logo-download/G/Gopher-logo-vector-01.svg" alt="Card image cap">
+          <a href="https://www.brandeps.com/logo-download/G/Gopher-logo-vector-01.svg">
+            <div class="mask rgba-white-slight"></div>
+          </a>
+        </div>
+  
+        <!-- Card content -->
+        <div class="card-body elegant-color white-text rounded-bottom">
+  
+          <!-- Title -->
+          <h4 class="card-title">GO</h4>
+          <hr class="hr">
+          <!-- Text -->
+          <p class="card-text white-text mb-4">Go was a new language for me in 3rd year, but quickly became my favorite language
+                                                thanks to <a href="https://humaidq.ae/">Humaid</a> being apart of our team;
+                                                <a href="https://nacdlow.com">Nadlow.</a> We used go-macaron (a go based web framework) 
+                                                in conjunction with basic web technologies to create a smart home app of the future called 
+                                                iglú, learn more about it <a href="https://nacdlow.com">Here.</a>.
+          </p>
+  
+        </div>
+      </div>
+    </div>  
+    </div>
 
 
   <!--Workstation HEADING-->
@@ -300,8 +388,8 @@
     <div class="card mb-4">
       <!-- Card image -->
       <div class="view overlay">
-        <img class="card-img-top" src="img/setup/chair500.jpg" alt="Card image cap">
-        <a href="img/setup/chair.jpg">
+        <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/71%2B6sA77JOL._AC_SL1500_.jpg" alt="Card image cap">
+        <a href="https://images-na.ssl-images-amazon.com/images/I/71%2B6sA77JOL._AC_SL1500_.jpg">
           <div class="mask rgba-white-slight"></div>
         </a>
       </div>
